# llama_swap_config_autogen

./: .gitignore  .markdownlint-cli2.jsonc  .yamllint.yml  README.md  Taskfile.yml  _typos.toml  base.example.yaml  biome.json  header.avif  package.json  pnpm-lock.yaml  pyproject.toml  spec.md  tutorial.md
.github/workflows/: ci.yml  typos.yml
llama_swap_config_autogen/: __init__.py  cli.py  config.py  generator.py  gguf_metadata.py  llama-swap-config-schema.json  models.py  template.py  template.yaml  validation_models.py  validator.py
test/: example.llam_swap.original.yaml  invalid_nested_macro.yaml  test_gguf_metadata.py  test_macro_expansion.py  test_mmproj.py  test_validation.py  valid_test.yaml
